--- a/Html/Form/style.css
+++ b/Html/Form/style.css
@@ -5,22 +5,74 @@
     background-color: rgba(137, 176, 223);
     height: 1080px;
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    justify-content: center;
 }
 .left{
-    border: 1px solid;
-    border-radius: 20px;
+    width: 500px;
     height: 50%;
-    width: 40%;
     background-color: white;
-
+    border-radius: 20px 0px 0px 20px;
 }
 .right{
-    border: 1px solid;
-    border-radius: 20px;
+    width: 50%;
     height: 50%;
-    width: 40%;
+    background-color:rgb(58, 58, 193);
+    border-radius: 0px 20px 20px 0px;
+}
+/* .left{
+    height: 50vh;
+    width: 50%;
     background-color: white;
+    border-radius: 20px 0px 0px 20px;
+    
+}
+
+.right{
+    height: 50vh;
+    width: 50%;
+    background-color:rgb(58, 58, 193);
+    border-radius: 0px 20px 20px 0px;
 
 }
+.name{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 80px;
+}
+
+#firstname{
+    width: 45%;
+    
+}
+#lastname{
+    width: 45%;
+    
+}
+.left input{
+    width: 80%;
+    margin: 20px;
+    border: none;
+    border-bottom: 1px solid;
+    height: 40px;
+}
+#position{
+    width: 80%;
+    margin: 20px;
+    height: 40px;
+    border: none;
+    border-bottom: 1px solid;
+} */
+/* #email{
+    width: 80%;
+}
+#date{
+    width: 80%;
+}
+#company{
+    width: 80%;
+}
+#position{
+    width: 80%;
+} */
