--- a/Html/Transition/style.css
+++ b/Html/Transition/style.css
@@ -17,7 +17,8 @@
     width: 100%;
     background-color: blue;
 }
-.tap{
+
+.tap-input{
     background-color: green;
     width: 100px;
     height: 100px;
@@ -26,11 +27,18 @@
     transition-timing-function: linear;
     transition-delay: 0s;
     border: none;
+    text-align: center;
 }
-.tap:active{
-    cursor: pointer;
+
+.tap-input:focus{
     width: 100%;
+    cursor: pointer;
+    outline: none;
+
+
 }
+
+
 
 /* Hover-Transition End */
 
@@ -52,7 +60,7 @@
     align-items: center;
     transition-property: width, height, font-size;
     transition-duration: 1s, 1s, 1s;
-    transition-delay: 0s, 0s, 0.3s;
+    transition-delay: 0s, 0s, 0s;
 }
 .text:hover{
     height: 100px;
@@ -121,16 +129,12 @@
 
 /* Check-box Start */
 
-.center{
-    position: absolute;
-    left: 50px;
-}
 #checkbox{
     position: relative;
     width: 80px;
     height: 40px;
     border-radius: 20px;
-    background: #c6c6c6;
+    background: rgb(0, 255, 0);
     appearance: none;
 }
 
@@ -142,15 +146,66 @@
     top: 0;
     left: 0;
     content: '';
-    background: white;
+    background-color: black;
     transition: 1s;
+    transition-property: all;
 }
 
+
 #checkbox:checked{
-    background-color: #03a9f4;
+    background-color: black;
 }
 #checkbox:checked::before{
     left: 40px;
+    
+    background: rgb(0, 255, 0);
 }
 
 /* Check-box End */
+
+
+/* Sidebar Start */
+
+ .sidebar{
+    position: relative;
+    width: 100px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    color: black;
+    transition-property: width,;
+    transition-duration: 0s;
+    transition-delay: 0s;
+    transition-timing-function: linear;
+} 
+
+.sidebar:hover{
+    width: 400px;
+}
+.icon{
+    color: white;
+    position: absolute;
+    font-size: 30px;
+    top: 10px;
+    right: 10px;
+}
+#bar{
+    margin-top: 35px;
+}
+.bar{
+    text-align: center;
+    background-color: teal;
+    color: white;
+    line-height: 60px;
+    margin-top: 25px;
+    transition-property: all;
+    transition-duration: 1s;
+}
+.bar:hover{
+    background-color: white;
+    color: black;
+    font-size: 40px;
+
+}
+
