--- a/Floatbox/style.css
+++ b/Floatbox/style.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(230, 230, 230, 0.6)
+    background-color: rgba(230, 230, 230, 0.6);
 }
 
 .wbox{
@@ -21,7 +21,7 @@
     width: 95px;
     height: 95px;
     text-align: center;
-    opacity: 0.2;
+    opacity: 1;
 }
 
 .wbox1{
@@ -52,6 +52,8 @@
     width: 95px;
     height: 95px;
     opacity: 0.1;
+    transition-property: top, right, bottom, left;
+    transition-duration: 1s, 1s, 1s, 1s;
 }
 
 .rbox1{
@@ -76,24 +78,24 @@
     right: 30%;
 }
 
-.floatbox:hover.rbox1{
+.floatbox:hover .rbox1{
     top: 0%;
     left: 0%;
     
 }
 
-.floatbox:hover.rbox2{
+.floatbox:hover .rbox2{
     top: 0%;
     right: 0%;
     
 }
 
-.floatbox:hover.rbox3{
+.floatbox:hover .rbox3{
     bottom: 0%;
     left: 0%;
 }
 
-.floatbox:hover.rbox4{
+.floatbox:hover .rbox4{
     bottom: 0%;
     right:0%;
 }
