--- a/Html/Transition/Last/style.css
+++ b/Html/Transition/Last/style.css
@@ -62,3 +62,49 @@ img{
     width: 100%;
     height: 100%;
 }
+
+.shadow{
+    width: 600px;
+    height: 600px;
+    position: absolute;
+
+}
+
+#shadow-top{
+    
+    width: 100%;
+    height: calc(100%/3);
+}
+
+#shadow-mid{
+    
+    width: 100%;
+    height: calc(100%/3);
+}
+
+#shadow-bot{
+
+    width: 100%;
+    height: calc(100%/3);
+}
+
+.shadow1{
+    position: absolute;
+    background-color: red;
+    width: 33.5%;
+    height: 33.5%;
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    transition-property: top, left, background-color;
+    transition-duration: 0.3s, 0.5s;
+
+}
+
+.shadow1:hover{
+    background-color: none;
+    width: 33.5%;
+    height: 33.5%;
+    top: -50px;
+    left: -50px;
+}
