--- a/Html/Transition/Last/style.css
+++ b/Html/Transition/Last/style.css
@@ -22,7 +22,6 @@ body{
 
 
 #grid{
-    background-color: aqua;
     width: 600px;
     height: 600px;
 }
@@ -32,7 +31,6 @@ body{
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: blue;
     height: calc(100%/3);
 }
 
@@ -41,7 +39,6 @@ body{
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: red;
     height: calc(100%/3);
 }
 
@@ -50,61 +47,102 @@ body{
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: wheat;
     height: calc(100%/3);
 }
 .sec-div{
     width: 100%;
     height: 100%;
+    position: relative;
+    
 }
 
 img{
     width: 100%;
     height: 100%;
+    filter: grayscale(100%);
+    transition: all;
+   
 }
-
 .shadow{
-    width: 600px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
     position: absolute;
-
-}
-
-#shadow-top{
-    
-    width: 100%;
-    height: calc(100%/3);
-}
-
-#shadow-mid{
-    
-    width: 100%;
-    height: calc(100%/3);
-}
-
-#shadow-bot{
-
-    width: 100%;
-    height: calc(100%/3);
-}
-
-.shadow1{
-    position: absolute;
-    background-color: red;
-    width: 33.5%;
-    height: 33.5%;
-    opacity: 0.5;
     top: 0;
     left: 0;
-    transition-property: top, left, background-color;
-    transition-duration: 0.3s, 0.5s;
-
+    right: 0;
+    transition: all 0.5s ease;
 }
 
-.shadow1:hover{
-    background-color: none;
-    width: 33.5%;
-    height: 33.5%;
+.sec-div:hover img{
+    filter: grayscale(0%);
+}
+
+
+.sec-div:hover .shadow1{
+
     top: -50px;
     left: -50px;
+    opacity: 0;
+
 }
+
+.sec-div:hover .shadow2{
+
+    top: -50px;
+    opacity: 0;
+
+}
+.sec-div:hover .shadow3{
+
+    top: -50px;
+    left: 50px;
+    opacity: 0;
+
+}
+
+
+.sec-div:hover .shadow4{
+
+    left: -50px;
+    opacity: 0;
+
+}
+
+.sec-div:hover .shadow5{
+
+    top: -50px;
+    opacity: 0;
+
+}
+.sec-div:hover .shadow6{
+
+    
+    left: 50px;
+    opacity: 0;
+
+}
+
+.sec-div:hover .shadow7{
+
+    top: 50px;
+    left: -50px;
+    opacity: 0;
+
+}
+
+.sec-div:hover .shadow8{
+
+    top: 50px;
+    opacity: 0;
+
+}
+.sec-div:hover .shadow9{
+
+    top: 50px;
+    left: 50px;
+    opacity: 0;
+
+}
+
+
